chore: fix storybook dark mode while waiting for official fix

--- a/.storybook/index.sass
+++ b/.storybook/index.sass
@@ -14,3 +14,7 @@ body
 
 html, body
   min-height: 100%
+
+// v7 & dark-mode compat (https://github.com/hipstersmoothie/storybook-dark-mode/issues/205)
+html.dark
+  background: #181818
